public class Personnage {
    private int x,y;
}