/**
* Interface representant une case du labyrinthe,
* pouvant etre un mur ou un sol
*/
public interface Case{

}